--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==1.1.1
 openpyxl==3.0.3
 Pillow==7.0.0
 pyfiglet==0.8.post1
+pymysql==0.9.3
 requests==2.23.0
 soupsieve==1.9.5
 urllib3==1.25.8
