--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 peewee
-beautifulsoup4==4.8.2
+beautifulsoup4==4.9.0
 bs4==0.0.1
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 et-xmlfile==1.0.1
-Flask==1.1.1
+Flask==1.1.2
 future==0.18.2
 idna==2.9
 itsdangerous==1.1.0
@@ -13,12 +13,13 @@ jdcal==1.4.1
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 openpyxl==3.0.3
-Pillow==7.0.0
+Pillow==7.1.1
 pyfiglet==0.8.post1
 pymysql==0.9.3
 requests==2.23.0
-soupsieve==1.9.5
+soupsieve==2.0
+stringcase==1.2.0
 urllib3==1.25.8
 waitress==1.4.3
 wcwidth==0.1.9
-Werkzeug==1.0.0
+Werkzeug==1.0.1
