--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-peewee
-beautifulsoup4==4.9.0
+beautifulsoup4==4.8.2
 bs4==0.0.1
-certifi==2020.4.5.1
+certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 et-xmlfile==1.0.1
-Flask==1.1.2
+Flask==1.1.1
 future==0.18.2
 idna==2.9
 itsdangerous==1.1.0
 jdcal==1.4.1
 Jinja2==2.11.1
+lxml==4.5.0
 MarkupSafe==1.1.1
 openpyxl==3.0.3
-Pillow==7.1.1
+peewee==3.13.2
+Pillow==7.0.0
 pyfiglet==0.8.post1
-pymysql==0.9.3
+PyMySQL==0.9.3
+PyMysqlDB==0.0.2
+python-distutils-extra==2.39
 requests==2.23.0
-soupsieve==2.0
+soupsieve==1.9.5
 stringcase==1.2.0
 urllib3==1.25.8
 waitress==1.4.3
 wcwidth==0.1.9
-Werkzeug==1.0.1
+Werkzeug==1.0.0
